include/firelite.h

struct FL_Batch;
struct FL_Config;
struct FL_Doc;
struct FL_Engine;
struct FL_Query;
struct FL_ResultSet;
struct FL_Transaction;
FL_Engine *fl_engine_open(const char *path);
bool fl_engine_is_indexes_ready(FL_Engine *engine);
void fl_engine_free(FL_Engine *engine);
FL_Doc *fl_doc_new();
void fl_doc_free(FL_Doc *doc);
int32_t fl_doc_insert_str(FL_Doc *doc, const char *key, const char *value);
int32_t fl_doc_insert_int(FL_Doc *doc, const char *key, int64_t value);
FL_Doc *fl_engine_get(FL_Engine *engine, const char *collection, const char *doc_id);
FL_Batch *fl_batch_new();
int32_t fl_batch_set(FL_Batch *batch, const char *collection, const char *doc_id, FL_Doc *doc);
int32_t fl_batch_commit(FL_Engine *engine, FL_Batch *batch);
FL_Query *fl_query_new(const char *collection);
void fl_query_free(FL_Query *query);
int32_t fl_query_where_eq_str(FL_Query *query, const char *field, const char *value);
int32_t fl_query_where_eq_int(FL_Query *query, const char *field, int64_t value);
int32_t fl_query_order_by(FL_Query *query, const char *field, bool ascending);
int32_t fl_query_limit(FL_Query *query, uintptr_t limit);
int32_t fl_query_offset(FL_Query *query, uintptr_t offset);
FL_ResultSet *fl_query_execute_to_handles(FL_Engine *engine, const FL_Query *query);
uintptr_t fl_result_set_count(FL_ResultSet *results);
FL_Doc *fl_result_set_get_doc(FL_ResultSet *results, uintptr_t index);
void fl_result_set_free(FL_ResultSet *results);
char *fl_doc_to_json(const FL_Doc *doc);
void fl_string_free(char *value);
FL_Transaction *fl_transaction_begin(FL_Engine *engine);
FL_Doc *fl_transaction_get(FL_Engine *engine,
                           FL_Transaction *tx,
                           const char *collection,
                           const char *doc_id);
int32_t fl_transaction_set(FL_Transaction *tx,
                           const char *collection,
                           const char *doc_id,
                           const FL_Doc *doc);
int32_t fl_transaction_commit(FL_Engine *engine, FL_Transaction *tx);